--- a/Backend/Umbraco9.Blazor/Pages/Index.razor
+++ b/Backend/Umbraco9.Blazor/Pages/Index.razor
@@ -1,7 +1,28 @@
 ﻿@page "/"
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+@using Umbraco9.Blazor.Services
+@using Umbraco9.Core.Models.Pages
+@if (Model == null)
+{
+    return;
+}
+<h1>@Model.Title</h1>
+<p>Total Elements on Homepage: @Model.Elements.Count</p>
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+
+@code
+{
+    [Inject]public IContentDeliveryService ContentDeliveryService { get; set; }
+    public HomepageModel Model { get; set; }
+
+    protected override async void OnInitialized()
+    {
+        if (ContentDeliveryService == null)
+            return;
+        
+        Model = await ContentDeliveryService.GetHomepage();
+
+        StateHasChanged();
+    }
+}
