--- a/Backend/Umbraco9.Blazor/PageComponents/HeroElementComponent.razor
+++ b/Backend/Umbraco9.Blazor/PageComponents/HeroElementComponent.razor
@@ -1,7 +1,7 @@
 ﻿@using Umbraco9.Core.Models.Elements
 
-<section class="px-2 py-32 bg-white md:px-0">
-    <div class="container items-center max-w-6xl px-8 mx-auto xl:px-5">
+<section class="px-2 py-16 md:px-0 mb-8 bg-gradient-to-t from-gray-300 via-white to-white">
+    <div class="container items-center max-w-6xl px-8 rounded-md mx-auto xl:px-5 ba">
         <div class="flex flex-wrap items-center sm:-mx-3">
             <div class="w-full md:w-1/2 md:px-3">
                 <div class="w-full pb-6 space-y-6 sm:max-w-md lg:max-w-lg md:space-y-4 lg:space-y-8 xl:space-y-9 sm:pr-5 lg:pr-0 md:pb-0">
@@ -21,7 +21,7 @@
             </div>
             <div class="w-full md:w-1/2">
                 <div class="w-full h-auto overflow-hidden rounded-md shadow-xl sm:rounded-xl">
-                    <img src="https://source.unsplash.com/random/1920x1080?inspiration" class="">
+                    <img src="https://source.unsplash.com/random/1920x1080?coffee" class="">
                 </div>
             </div>
         </div>
