Frequently Asked Questions Element

--- a/Backend/Umbraco9.Blazor/PageComponents/ComponentList.razor
+++ b/Backend/Umbraco9.Blazor/PageComponents/ComponentList.razor
@@ -13,6 +13,9 @@
         case ParagraphElementModel paragraphElement:
             <ParagraphElementComponent Model="@paragraphElement" />
             break;
+        case FaqElementModel faqElement:
+            <FaqElementComponent Model="@faqElement"/>
+            break;
     }
 }
 @code {
