--- a/Backend/Umbraco9.Blazor/PageComponents/ParagraphElementComponent.razor
+++ b/Backend/Umbraco9.Blazor/PageComponents/ParagraphElementComponent.razor
@@ -1,9 +1,9 @@
 ﻿@using Umbraco9.Core.Models.Elements
 
-<div class="container items-center max-w-6xl px-8 mx-auto xl:px-5">
+<div class="container items-center py-8 max-w-6xl px-8 mx-auto xl:px-5">
     <div class="flex flex-wrap items-center sm:-mx-3">
         <div class="w-full md:px-3">
-            <h4 class="text-3xl font-normal leading-normal mt-0 mb-2 relative text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 to-indigo-400">
+            <h4 class="text-3xl text-center font-normal leading-normal mt-0 mb-2 relative text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 to-indigo-400">
                 @Model.Title
             </h4>
             <p class="text-lg font-light leading-relaxed mt-6 mb-4 text-gray-800">
