--- a/Backend/Umbraco9.Blazor/Shared/MainLayout.razor
+++ b/Backend/Umbraco9.Blazor/Shared/MainLayout.razor
@@ -3,7 +3,7 @@
 <div class="page">
     <div class="main">
         <NavMenu />
-        <div class="content">
+        <div class="content mb-8">
             @Body
         </div>
     </div>
