--- a/Backend/Umbraco9.Blazor/PageComponents/HeroElementComponent.razor
+++ b/Backend/Umbraco9.Blazor/PageComponents/HeroElementComponent.razor
@@ -1,6 +1,6 @@
 ﻿@using Umbraco9.Core.Models.Elements
 
-<section class="px-2 py-16 md:px-0 mb-8 bg-gradient-to-t from-gray-300 via-white to-white">
+<section class="px-2 py-16 md:px-0 mb-8 bg-white">
     <div class="container items-center max-w-6xl px-8 rounded-md mx-auto xl:px-5 ba">
         <div class="flex flex-wrap items-center sm:-mx-3">
             <div class="w-full md:w-1/2 md:px-3">
