Start on Testimonial Component & Umbraco Collection

--- a/Backend/Umbraco9.Blazor/PageComponents/ComponentList.razor
+++ b/Backend/Umbraco9.Blazor/PageComponents/ComponentList.razor
@@ -16,6 +16,9 @@
         case FaqElementModel faqElement:
             <FaqElementComponent Model="@faqElement"/>
             break;
+        case TestimonialElementModel testimonialElement:
+            <TestimonialElementComponent Model="@testimonialElement"/>
+            break;
     }
 }
 @code {
