Configuration Injection and Image Croppings

--- a/Backend/Umbraco9.Blazor/_Imports.razor
+++ b/Backend/Umbraco9.Blazor/_Imports.razor
@@ -9,3 +9,5 @@
 @using Umbraco9.Blazor
 @using Umbraco9.Blazor.Shared
 @using Umbraco9.Blazor.PageComponents
+@using Umbraco9.Core.Models.Elements
+@using Microsoft.Extensions.Configuration
