--- a/Backend/Umbraco9.Blazor/PageComponents/FaqElementComponent.razor
+++ b/Backend/Umbraco9.Blazor/PageComponents/FaqElementComponent.razor
@@ -4,7 +4,7 @@
     <div class="w-full">
             <div class="flex flex-col md:flex-row">
                 <div class="md:w-1/3 text-sm">
-                    <div class="text-3xl text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 to-indigo-400">@Model.Title</div>
+                    <div class="text-3xl text-indigo-600">@Model.Title</div>
                     <div class="my-2">@((MarkupString) Model.Description)</div>
                 </div>
                 <div class="md:w-2/3">
