--- a/Backend/Umbraco9.Blazor/PageComponents/TestimonialElementComponent.razor
+++ b/Backend/Umbraco9.Blazor/PageComponents/TestimonialElementComponent.razor
@@ -1,4 +1,4 @@
-﻿@using Umbraco9.Core.Models.Elements
+﻿@inject IConfiguration _configuration
 
 <section class="flex items-center justify-center py-20 bg-white min-w-screen">
     <div class="px-16 bg-white">
@@ -13,13 +13,15 @@
                 @Model.Subtitle
             </h2>
             <div class="block w-full h-0.5 max-w-lg mt-6 bg-purple-100 rounded-full"></div>
-            @foreach (var item in Model.Testimonials)
-            {
-                <div class="items-center justify-center w-full mt-12 mb-4 lg:flex">
-                    <div class="flex flex-col items-start justify-start w-full h-auto mb-12 lg:w-1/3 lg:mb-0">
+            <div class="justify-center w-full mt-12 mb-4 lg:flex">
+                @foreach (var item in Model.Testimonials)
+                {
+                    var profilePictureUrl = _configuration["cms:hostUrl"] + item.ProfilePictureUrl;
+
+                    <div class="flex flex-col items-start justify-start w-full h-auto mb-12 lg:w-1/3 lg:mb-0 px-4">
                         <div class="flex items-center justify-center">
                             <div class="w-16 h-16 mr-4 overflow-hidden bg-gray-200 rounded-full">
-                                <img src="@item.ProfilePictureUrl" class="object-cover w-full h-full">
+                                <img src="@profilePictureUrl" class="object-cover w-full h-full">
                             </div>
                             <div class="flex flex-col items-start justify-center">
                                 <h4 class="font-bold text-gray-800">@item.FullName</h4>
@@ -28,8 +30,8 @@
                         </div>
                         <blockquote class="mt-8 text-lg text-gray-500">"@item.Testimonial"</blockquote>
                     </div>
-                </div>
-            }
+                }
+            </div>
         </div>
     </div>
 </section>
