Added Chart Element using Chart.Js

--- a/Backend/Umbraco9.Blazor/PageComponents/ComponentList.razor
+++ b/Backend/Umbraco9.Blazor/PageComponents/ComponentList.razor
@@ -19,6 +19,9 @@
         case TestimonialElementModel testimonialElement:
             <TestimonialElementComponent Model="@testimonialElement"/>
             break;
+        case ChartElementModel chartElement:
+            <ChartElementComponent Model="@chartElement"/>
+            break;
     }
 }
 @code {
