--- a/Backend/Umbraco9.Blazor/PageComponents/TestimonialElementComponent.razor
+++ b/Backend/Umbraco9.Blazor/PageComponents/TestimonialElementComponent.razor
@@ -1,6 +1,6 @@
 ﻿@inject IConfiguration _configuration
 
-<section class="flex items-center justify-center py-20 bg-white min-w-screen">
+<section class="flex items-center justify-center pt-20 bg-white min-w-screen">
     <div class="px-16 bg-white">
         <div class="container flex flex-col items-start mx-auto lg:items-center">
             <p class="relative flex items-start justify-start w-full text-lg font-bold tracking-wider text-indigo-600 uppercase lg:justify-center lg:items-center">@Model.Title</p>
