--- a/Backend/Umbraco9.Blazor/_Imports.razor
+++ b/Backend/Umbraco9.Blazor/_Imports.razor
@@ -11,3 +11,10 @@
 @using Umbraco9.Blazor.PageComponents
 @using Umbraco9.Core.Models.Elements
 @using Microsoft.Extensions.Configuration
+@using ChartJs.Blazor;
+@using ChartJs.Blazor.PieChart
+@using ChartJs.Blazor.Util
+@using ChartJs.Blazor.Common
+@using ChartJs.Blazor.BarChart
+@using ChartJs.Blazor.BarChart.Axes
+@using ChartJs.Blazor.Common.Axes
