--- a/Backend/Umbraco9.Backoffice/wwwroot/umbraco/views/components/property/umb-property.html
+++ b/Backend/Umbraco9.Backoffice/wwwroot/umbraco/views/components/property/umb-property.html
@@ -24,7 +24,20 @@
 
                     <umb-property-actions ng-if="!vm.showInherit" actions="vm.propertyActions"></umb-property-actions>
 
-                    <small class="control-description" ng-if="vm.property.description" ng-bind-html="vm.property.description | preserveNewLineInHtml"></small>
+                    <small class="control-description" ng-if="vm.property.description" ng-bind-html="vm.property.description | simpleMarkdown"></small>
+
+                    <div ng-if="vm.property.extendedDescription">
+
+                      <div ng-if="vm.property.extendedDescriptionVisible">
+                        <small class="control-description" ng-bind-html="vm.property.extendedDescription | simpleMarkdown"></small>
+                      </div>
+
+                      <button type="button" class="btn btn-mini btn-link btn-link-reverse p0" ng-click="vm.property.extendedDescriptionVisible = !vm.property.extendedDescriptionVisible">
+                          <localize ng-if="!vm.property.extendedDescriptionVisible" key="general_readMore"></localize>
+                          <localize ng-if="vm.property.extendedDescriptionVisible" key="general_close"></localize>
+                      </button>
+
+                    </div>
                 </div>
 
                 <div class="controls" ng-transclude>
