--- a/Backend/Umbraco9.Blazor/Pages/Index.razor
+++ b/Backend/Umbraco9.Blazor/Pages/Index.razor
@@ -2,20 +2,19 @@
 @implements IDisposable
 @using Microsoft.Extensions.Logging
 @using NPoco.fastJSON
-@using Umbraco9.Blazor.Services
 @using Umbraco9.Core.Models.Pages
 @using Umbraco9.Core.Services
-@inject PersistentComponentState ApplicationState
-@inject IContentDeliveryService ContentDeliveryService
-@inject ILogger<Index> logger
+@inject PersistentComponentState _applicationState
+@inject IContentDeliveryService _contentDeliveryService
+@inject ILogger<Index> _logger
 
-<ComponentList Elements="contentData?.Elements" />
+<ComponentList Elements="_contentData?.Elements" />
 
 @code
 {
-    private HomepageModel contentData;
+    private HomepageModel _contentData;
 
-    private PersistingComponentStateSubscription persistingSubscription;
+    private PersistingComponentStateSubscription _persistingSubscription;
 
     // See - https://docs.microsoft.com/en-us/aspnet/core/mvc/views/tag-helpers/built-in/persist-component-state?view=aspnetcore-6.0 
     // For more information on persisting data during SSR so we do not see a flash of content where the data is loaded on the server 
@@ -23,39 +22,39 @@
 
     protected override async Task OnInitializedAsync()
     {
-        persistingSubscription = ApplicationState.RegisterOnPersisting(PersistData);
+        _persistingSubscription = _applicationState.RegisterOnPersisting(PersistData);
 
         try
         {
             // Due to an issue where the ApplicationState does not support deserializing 
             // interfaces, we are serializing the data using JSON.ToNiceJSON instead as a work around
-            if (!ApplicationState.TryTakeFromJson<string>("fetchdata", out var restored))
+            if (!_applicationState.TryTakeFromJson<string>("fetchdata", out var restored))
             {
-                contentData = await ContentDeliveryService.GetPageOfType<HomepageModel>("/");
+                _contentData = await _contentDeliveryService.GetPageOfType<HomepageModel>("/");
             }
             else
             {
-                contentData = JSON.ToObject<HomepageModel>(restored!);
+                _contentData = JSON.ToObject<HomepageModel>(restored!);
             }
         }
         catch(Exception ex)
         {
-            logger.LogError(ex, "Error loading page data");            
+            _logger.LogError(ex, "Error loading page data");            
         }
     }
 
     private Task PersistData()
     {
         // Serialize the data in a format that will rehydrate the IElement interfaces properly
-        var prettyJson = JSON.ToNiceJSON(contentData);
-        ApplicationState.PersistAsJson("fetchdata", prettyJson);
+        var prettyJson = JSON.ToNiceJSON(_contentData);
+        _applicationState.PersistAsJson("fetchdata", prettyJson);
 
         return Task.CompletedTask;
     }
 
     void IDisposable.Dispose()
     {
-        persistingSubscription.Dispose();
+        _persistingSubscription.Dispose();
     }
 
 }
